[metadata]
name = pyesp
version = 0.0.1
author = Daniel Migault
author_email=mglt.biz@gmail.com
description = "A package to build ESP packets"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mglt/pyesp
project_urls =
    Bug Tracker = https://github.com/mglt/pyesp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir = 
  = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
# console_scripts =
#    lab_eval_lab = lab_eval.eval_lab:cli 


